// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Maintenance component should render with default props 1`] = `
<EmptyState
  className="ins-c-empty-state__maintenance"
>
  <EmptyStateHeader
    headingLevel="h4"
    icon={
      <EmptyStateIcon
        icon={[Function]}
      />
    }
    titleText="Maintenance in progress"
  />
  <EmptyStateBody>
    <Stack>
      <StackItem>
        We are currently undergoing scheduled maintenance and will be
      </StackItem>
      <StackItem>
        unavailable from 
        10am
         to 
        12am
         UTC (
        6am
        -
        8am
         
        EST
        ).
      </StackItem>
      <StackItem>
        For more information please visit 
        <a
          href="https://status.redhat.com/incidents"
        >
          status.redhat.com
        </a>
        .
      </StackItem>
    </Stack>
  </EmptyStateBody>
</EmptyState>
`;

exports[`Maintenance component should render with new description 1`] = `
<EmptyState
  className="ins-c-empty-state__maintenance"
>
  <EmptyStateHeader
    headingLevel="h4"
    icon={
      <EmptyStateIcon
        icon={[Function]}
      />
    }
    titleText="Maintenance in progress"
  />
  <EmptyStateBody>
    <span>
       test 
    </span>
  </EmptyStateBody>
</EmptyState>
`;

exports[`Maintenance component should render with times 1`] = `
<EmptyState
  className="ins-c-empty-state__maintenance"
>
  <EmptyStateHeader
    headingLevel="h4"
    icon={
      <EmptyStateIcon
        icon={[Function]}
      />
    }
    titleText="Maintenance in progress"
  />
  <EmptyStateBody>
    <Stack>
      <StackItem>
        We are currently undergoing scheduled maintenance and will be
      </StackItem>
      <StackItem>
        unavailable from 
        10am
         to 
        12am
         UTC (
        12am
        -
        2am
         
        EST
        ).
      </StackItem>
      <StackItem>
        For more information please visit 
        <a
          href="https://status.redhat.com/incidents"
        >
          status.redhat.com
        </a>
        .
      </StackItem>
    </Stack>
  </EmptyStateBody>
</EmptyState>
`;
